# xinx

./: .drone.yml  .gitignore  .hgignore  CHANGELOG  CMakeLists.txt  Doxyfile  INSTALL  README  README.md  TODO  WARNING  application.qrc  licence.html  project.pro  project_mode.pri  project_mode.pro  qdevelop-settings.db  xinx-project.pro  xinx.kdevelop  xinx.pro  xinx_diagramme.xmi
components/: CMakeLists.txt  borderlayout.cpp  borderlayout.h  borderlayout_p.h  checkcombobox.cpp  checkcombobox.h  checkcombobox_p.h  completerdirmodel.cpp  completerdirmodel.h  components-config.h  components.pro  customschemeimpl.cpp  customschemeimpl.h  customschemeimpl_p.h  directoryedit.cpp  directoryedit.h  directoryedit_p.h  directoryeditwidget.cpp  directoryeditwidget.h  directoryeditwidget_p.h  kcolorcombo.h  p_pluginselector.h  p_xinxpluginselector.h  pluginelement.cpp  pluginelement.h  pluginelement_p.h  pluginselector.cpp  pluginselector.h  qmenuview.cpp  qmenuview.h  qmenuview_p.h  stable_header.h  stringcombobox.cpp  stringcombobox.h  xinxcolorcombo.cpp  xinxcolorcombo.h  xinxcolorcombo_p.h  xinxdirectorylistwidget.cpp  xinxdirectorylistwidget.h  xinxdirectorylistwidget_p.h  (+9 more)
components/designer/: components_designer.pro  customschemeplugin.cpp  customschemeplugin.h  directoryeditplugin.cpp  directoryeditplugin.h  directoryeditwidgetplugin.cpp  directoryeditwidgetplugin.h  kcolorcomboplugin.cpp  kcolorcomboplugin.h  pluginselectorplugin.cpp  pluginselectorplugin.h  xinxcolorcomboplugin.cpp  xinxcolorcomboplugin.h  xinxdesignerplugin.cpp  xinxdesignerplugin.h  xinxlistwidgetplugin.cpp  xinxlistwidgetplugin.h
components/translations/: xinxcmp_bg.ts  xinxcmp_en.ts  xinxcmp_fr.ts  xinxcomponents_fr.qm  xinxcomponents_fr.ts
components/ui/: customscheme.ui  xinxlistwidget.ui
doc/: CMakeLists.txt  Doxyfile  footer.html  framework.qch  header.html  qt-doc.tag
doc/html/: abstractcontentviewmodel_8cpp.html  abstractcontentviewmodel_8h.html  abstracteditor_8cpp.html  abstracteditor_8h.html  abstractfileeditor_8cpp.html  abstractfileeditor_8h.html  actioninterface_8cpp.html  actioninterface_8h.html  annotated.html  appsettings_8cpp.html  appsettings_8h.html  basesnipetitemmodel_8cpp.html  basesnipetitemmodel_8h.html  bookmarkeditorinterface_8cpp.html  bookmarkeditorinterface_8h.html  bookmarktexteditorinterface_8cpp.html  bookmarktexteditorinterface_8h.html  borderlayout_8cpp.html  borderlayout_8h.html  callsnipetdlg_8cpp.html  callsnipetdlg_8h.html  categoryitemmodel_8cpp.html  categoryitemmodel_8h.html  categorypropertydlgimpl_8cpp.html  categorypropertydlgimpl_8h.html  categorytreeview_8cpp.html  categorytreeview_8h.html  classAbstractContentViewModel-members.html  classAbstractContentViewModel.html  classAbstractEditor-members.html  classAbstractEditor.html  classAbstractEditor__inherit__graph.map  classAbstractEditor__inherit__graph.md5  classAbstractFileEditor-members.html  classAbstractFileEditor.html  classAppSettings-members.html  classAppSettings.html  classAppSettingsSettings-members.html  classAppSettingsSettings.html  classAppSettingsSettings__inherit__graph.map  (+888 more)
doc/images/: borderlayout1.eps  checkcombobox.eps
doc/manual/: manual-dev.tex  manual-user.tex  manual.latex
framework/: CMakeLists.txt  application.qrc  framework.pro
framework/actions/: actioninterface.cpp  actioninterface.h  actioninterface_p.h  actionmanager.cpp  actionmanager.h  actionmanager_p.h
framework/application/: about.ui  aboutdialogimpl.cpp  aboutdialogimpl.h  mainformimpl.cpp  mainformimpl.h  newversion.ui  version.h  (+16 more)
libxinx/: CMakeLists.txt  abstractcontentviewmodel.cpp  abstractcontentviewmodel.h  abstracteditor.cpp  abstracteditor.h  abstractfileeditor.cpp  abstractfileeditor.h  appsettings.cpp  appsettings.h  borderlayout.h  completionnodemodel.cpp  completionnodemodel.h  config.xml  contentviewcache.cpp  contentviewcache.h  contentviewmodel.cpp  contentviewmodel.h  contentviewnode.cpp  contentviewnode.h  contentviewparser.cpp  contentviewparser.h  exceptions.cpp  exceptions.h  filecontentitemmodel.cpp  filecontentitemmodel.h  filecontentstructure.cpp  filecontentstructure.h  filewatcher.cpp  filewatcher.h  iextendededitor.h  isyntaxhighlighter.h  itemmodelfileeditor.cpp  itemmodelfileeditor.h  libplugins.pro  libxinx.pro  numberbar.cpp  numberbar.h  p_filewatcher.h  plugininterfaces.h  rcs.cpp  (+30 more)
src/: CMakeLists.txt  Editor.cpp  Editor.h  JavaObjectFile.ui  ObjectView.cpp  ObjectView.h  TabEditor.cpp  TabEditor.h  aboutdialogimpl.cpp  aboutdialogimpl.h  application.qrc  appsettings.cpp  appsettings.h  com.editor.xinx.xml  com.generix.xinx.xml  com.generix.xmlstudio.xml  commitmessagedialogimpl.cpp  commitmessagedialogimpl.h  config.xml  configurationfile.cpp  configurationfile.h  connectionwebservicesdialogimpl.cpp  connectionwebservicesdialogimpl.h  customdialogimpl.cpp  customdialogimpl.h  cvsfiles.cpp  cvsfiles.h  cvsthread.cpp  cvsthread.h  directoryedit.cpp  directoryedit.h  dirrcsmodel.cpp  dirrcsmodel.h  editor.cpp  editor.h  editorcompletion.cpp  editorcompletion.h  editorthread.cpp  editorthread.h  editorthreadxsl.cpp  (+156 more)
xinx/: CMakeLists.txt  aboutdialogimpl.cpp  aboutdialogimpl.h  application.qrc  appsettings.cpp  appsettings.h  commitmessagedialogimpl.cpp  commitmessagedialogimpl.h  config.xml  configurationfile.cpp  configurationfile.h  customdialogimpl.cpp  customdialogimpl.h  customdialogmodeles.cpp  customdialogmodeles.h  cvsthread.cpp  directoryedit.h  dirrcsmodel.cpp  dirrcsmodel.h  editor.cpp  editor.h  errordockimpl.cpp  errordockimpl.h  filecontentdockwidget.cpp  filecontentdockwidget.h  fileeditor.cpp  fileeditor.h  flattreeview.cpp  flattreeview.h  genxml.bat  iconprojectprovider.cpp  iconprojectprovider.h  kcolorcombo.cpp  linguist_update.sh  logdialogimpl.cpp  logdialogimpl.h  main.cpp  mainformimpl.cpp  mainformimpl.h  newprojectwizard.cpp  (+81 more)
xinxprojectwizard/: CMakeLists.txt  Makefile.Debug  main.cpp  projectconverter.cpp  projectconverter.h  projectwizard.cpp  projectwizard.h  qrc_xinxprojectwizard.cpp  xinxprojectwizard  xinxprojectwizard.pro  xinxprojectwizard.qrc
(+1862 files in other folders)
