project(xinx-project)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules/")
cmake_minimum_required(VERSION 2.8.0)

add_custom_target(translation)

add_subdirectory(ext/ideality/lib)
add_subdirectory(ext/qcodeedit/lib)
add_subdirectory(components)
add_subdirectory(framework)
add_subdirectory(plugins/core)
add_subdirectory(plugins/empty)
add_subdirectory(plugins/cvsplugin)
add_subdirectory(plugins/svnplugin)
add_subdirectory(plugins/svnpluginwrapper)
add_subdirectory(plugins/services)
add_subdirectory(plugins/generix)
add_subdirectory(xinx)
add_subdirectory(xinxcrash)

file(COPY templates DESTINATION ./ PATTERN .svn EXCLUDE)
file(COPY datas DESTINATION ./ PATTERN .svn EXCLUDE)
file(COPY scripts DESTINATION ./ PATTERN .svn EXCLUDE)

install(DIRECTORY templates DESTINATION ./ PATTERN .svn EXCLUDE)
install(DIRECTORY datas DESTINATION ./ PATTERN .svn EXCLUDE)
install(DIRECTORY scripts DESTINATION ./ PATTERN .svn EXCLUDE)
install(DIRECTORY ${CMAKE_BINARY_DIR}/i18n DESTINATION ./ PATTERN .svn EXCLUDE)

find_package(Doxygen)
if (DOXYGEN_FOUND)
	add_custom_target(doc ${DOXYGEN_EXECUTABLE} ${CMAKE_SOURCE_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endif(DOXYGEN_FOUND)
